Initial event delegation build

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <label for="subtotal">Subtotal</label>
         <input type="text" name="money" id="subtotal">
         <label for="tipSelection">Tip Amount</label>
-        <select name="generic" id="tipSelection">
-          <option value="noneSelected" selected autocomplete="off">Generic or Custom Tip</option>
+        <select name="money" id="tipSelection">
+          <option value="noneSelected" selected disabled autocomplete="off">Generic or Custom Tip</option>
           <option value="customSelected" autocomplete="off">Enter Custom Tip</option>
           <option autocomplete="off" value="5">5%</option>
           <option autocomplete="off" value="10">10%</option>
