JavaScript now updates the HTML with the appropriate total

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <section>
       <header>Here is Your New Total</header>
-      <p>Total: </p>
+      <p id="billTotal">Total: </p>
     </section>
 
   </section>
